# CliperAi-

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  clean_all.py  cliper.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  show_logs.py  test_dual_llm_support.py
.claude/: claude.md
.cursor/rules/: comportamiento.mdc
config/: content_presets.py
config/channels/: aicdmx.yaml  example-photography.yaml  generic.yaml
docs/: idea.md  idea2.md
pasoxpaso/: CLIPER-UX-FLOW.md  branding.md  cleaner.md  contextofull.md  docker.md  paso2.md  paso3.md  paso4.md  pasos.md
pasoxpaso/00-FUNDACION/: TECHNICAL-STACK.md  docker.md
src/: cleanup_manager.py  clips_generator.py  copys_generator.py  downloader.py  local_importer.py  reframer.py  subtitle_generator.py  transcriber.py  video_exporter.py
src/models/: copy_schemas.py
temp/: .gitignore
tests/: diagnose_subtitle_duplication.py  diagnose_subtitles.py  spike_face_reframing.py  test_apply_subtitles_to_reframed.sh  test_ass_generation.py  test_audio_mapping.py  test_cleaner_exhaustive.py  test_copy_generation_full.py  test_copy_generation_parts.py  test_copy_validation_with_opening_words.py  test_copys_generation_with_injector.py  test_dependencies_paso3.py  test_face_tracking_subtitles.sh  test_ffmpeg_subprocess.py  test_gemini_api.py  test_logo_subtitles_regression.py  test_opening_words_extraction.py  test_prompt_injector.py  test_prompts_integration_e2e.py  test_real_subtitle_bug.py  test_subtitle_duplication_manual.sh  test_subtitle_filter_complex.py
(+72 files in other folders)
